--- a/css/main.css
+++ b/css/main.css
@@ -1,55 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 * {
-    background-color: #242424;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
+  background-color: #1f1f1f;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
 
+/* Navbar code starts here */
 nav {
-    height: 100px;
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 410px 0px 450px;
-    margin: auto;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    background: none;
-    background: none;
-}
-
-nav ul li{
-    margin: 0px 15px;
-    background: none;
-}
-
-nav ul li a {
-    color: #b5b5b5;
-    text-decoration: none;
-    text-transform: uppercase;
-    background: none;
+  height: 100px;
+  background-color: #040406;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 410px 0px 450px;
+  margin: auto;
 }
 
 #logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 150px;
-    padding: 20px 0px 20px 0px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 150px;
+  padding: 20px 0px 20px 0px;
 }
 
-nav #cart {
-    height: 23px;
-    background: none;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: none;
 }
 
-nav ul li a:hover{
-    color: #FFF;
-    transition: all 0.3s ease-in-out;
+nav li {
+  float: left;
 }
+
+nav li,
+i {
+  background: none;
+}
+
+nav li a,
+.dropbtn {
+  display: inline-block;
+  color: #b8b8b8;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  background: none;
+}
+
+nav li a:hover,
+.dropdown:hover .dropbtn {
+  color: #fff;
+}
+
+li.dropdown {
+  display: inline-block;
+  background: none;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #828282;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-menu a {
+  color: black;
+  text-transform: capitalize;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-menu a:hover {
+  background-color: #545454;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+/* Navbar code ends here */
