added slider and search bar

--- a/css/main.css
+++ b/css/main.css
@@ -93,3 +93,47 @@ li.dropdown {
 }
 
 /* Navbar code ends here */
+
+.search{
+  padding: 5px 20px 5px 0px;
+  float: right;
+}
+.search-field{
+  padding: 5px;
+  width: 300px;
+  border-color: #0a0a0a;
+  background-color: transparent;
+  color:#fff;
+  border-radius: 10px;
+}
+
+input.search-field:focus{
+  background: none;
+  resize: none;
+  background-color: transparent;
+  outline: none;
+}
+
+.section-below-slider{
+  padding-top: 80px;
+  text-align: center;
+  color: #b8b8b8;
+  text-transform: capitalize;
+}
+
+.new-arrivals {
+  display: flex;
+  flex-direction: row;
+  background-color: #141414;
+  justify-content: center;
+}
+
+
+.new-arrivals > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
